src/objects/LiveChatTranscript.object
<CustomObject>
    <fields>
        <fullName>AccountId__c</fullName>
        <label>Account Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Chat_Duration_Minutes__c</fullName>
        <formula>(EndTime -  StartTime)*1440</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Chat Duration (Minutes)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Chat_Duration_Seconds__c</fullName>
        <formula>(EndTime-StartTime)*1440*60</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Chat Duration (Seconds)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Chat_Hour__c</fullName>
        <formula>IF(  (DATEVALUE(CreatedDate) &lt;= DATE(2014,3,9)&amp;&amp; DATEVALUE(CreatedDate) &gt;= DATE(2013,11,3))
, VALUE(MID(TEXT( CreatedDate -6/24 ),12,2)), 
VALUE(MID(TEXT( CreatedDate -5/24),12,2)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Chat Hour</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Chat_Offered_Hourly__c</fullName>
        <formula>/* VALUE( MID( TEXT( RequestTime ), 12, 2 ) ) -5 */
IF( (DATEVALUE(RequestTime) &lt;= DATE(2015,3,8)&amp;&amp; DATEVALUE(RequestTime) &gt;= DATE(2014,11,2)) 
, VALUE(MID(TEXT( RequestTime -6/24 ),12,2)), 
VALUE(MID(TEXT( RequestTime -5/24),12,2)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Chat Offered Hourly</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>FirstName__c</fullName>
        <label>FirstName</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastName__c</fullName>
        <label>LastName</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Live Chat Transcripts</relationshipLabel>
        <relationshipName>Live_Chat_Transcripts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Speed_of_Answer__c</fullName>
        <formula>(StartTime - RequestTime)*1440*60</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Speed of Answer (Seconds)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Store_URL__c</fullName>
        <label>Store URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SubscriptionId__c</fullName>
        <label>Subscription Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Time_to_Abandon__c</fullName>
        <formula>IF (ISBLANK (StartTime),(EndTime - RequestTime)*1440*60, null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Time to Abandon (Seconds)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <listViews>
        <fullName>IPAddress</fullName>
        <columns>Name</columns>
        <columns>LiveChatVisitor</columns>
        <columns>StartTime</columns>
        <columns>EndTime</columns>
        <columns>Status</columns>
        <columns>IpAddress</columns>
        <columns>Chat_Duration_Minutes__c</columns>
        <columns>Speed_of_Answer__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CreatedDate</field>
            <operation>equals</operation>
            <value>YESTERDAY,TODAY</value>
        </filters>
        <label>IPAddress</label>
        <sharedTo/>
    </listViews>
    <sharingModel>Read</sharingModel>
</CustomObject>